# walmart-sparkathon-2025

./: .gitignore  README.md  dummydaata.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  test.ipynb
ai-api/: main.py
ai-api/models/: image_request_model.py  product_id_model.py  request_model.py
ai-api/services/: embeddings.py  query.py
ai-api/utils/: data_manip.py  to_base64.py
backend/: README.md  importCsv.js  index.js  package-lock.json  package.json  pnpm-lock.yaml
src/: App.jsx  index.css  main.jsx
src/components/: CartContext.jsx  CartPage.jsx  Footer.jsx  Header.css  Header.jsx  HeroPage.jsx  ImageSearchContext.jsx  MainCarousel.jsx  Navigation.jsx  ProductCard.jsx  ProductGridSkeleton.jsx  ProductPage.jsx  PromoCard.jsx  SearchPage.jsx  index.jsx
